# SIMAJU-CORE-FRAMEWORK

./: .env.example  .gitignore  LICENSE  README.md  ascii-art.txt  index.js  install.sh  mji  name.txt  package-lock.json  package.json  seed-inventory.js  setup.sh  simaju  simaju.json
Dokumentasi/: CLI_COMMAND_SYSTEM.md  advanced-features.md  architecture.md  brand-identity.md  cli-command-system.md  communication-gateway.md  crm.md  database-design.md  feature-command-system.md  features-overview.md  firewall_guard.md  fitur.md  guide_module_development.md  guide_plugin_development.md  guide_theme_development.md  lms.md  payment-system.md  perbaikan.md  plugin-system.md  project-summary.md  rbac-security.md  readme.md  saas-multi-tenant.md  security-system.md  seo-system.md  seo.md
api/docs/: swagger.js
api/v1/: index.js
examples/: basic-server.js  custom-module.js
guard/: Cargo.toml  Dockerfile  guard.toml  simaju-guard.service
guard/src/: config.rs  main.rs  metrics.rs  proxy.rs
guard/src/admin/: handlers.rs  mod.rs  routes.rs
guard/src/layers/: analyzer.rs  auth.rs  inspector.rs  mod.rs  network.rs  tls.rs
guard/src/rules/: cmd_inject.rs  mod.rs  sqli.rs  traversal.rs  xss.rs
guard/src/store/: brute_store.rs  ip_list.rs  mod.rs  rate_store.rs
public/css/: admin.css
public/js/: docs-layout.js
public/welcome/: ecosystem.html  index.html
routes/: api.js  web.js
scripts/: debug-db.js  monitor.js  test-db.js
src/config/: database.js  env.js
src/core/: app.js  controller.js  event.js  middleware.js  plugin-manager.js  router.js  scheduler.js  service.js  theme-manager.js  web-router.js
src/database/: base-model.js  base-seeder.js  connection.js  errors.js  index.js  migration-manager.js  model.js  query-builder.js  seeder-manager.js  (+1 more)
tests/: auth.test.js  user.test.js
(+173 files in other folders)
