[package]
name    = "simaju-guard"
version = "0.1.0"
edition = "2021"
authors = ["SIMAJU Team"]
description = "SIMAJU Guard — Rust Firewall & Reverse Proxy for SIMAJU Core Framework"

[[bin]]
name = "simaju-guard"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio       = { version = "1",  features = ["full"] }

# HTTP
hyper       = { version = "1",  features = ["full"] }
hyper-util  = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes       = "1"

# HTTP client (untuk forward request ke Node.js)
reqwest     = { version = "0.12", features = ["stream"], default-features = false }

# TLS
rustls          = "0.23"
rustls-pemfile  = "2"
tokio-rustls    = "0.26"

# Config
config  = "0.14"
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"

# Rate limiting
governor    = "0.6"
nonzero_ext = "0.3"

# Concurrent data structures
dashmap = "6"

# Regex (attack detection)
regex   = "1"
once_cell = "1"

# JWT pre-verify
jsonwebtoken = "9"

# GeoIP (opsional)
maxminddb = "0.23"

# Logging & tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender    = "0.2"

# Metrics (Prometheus)
prometheus = { version = "0.13", features = ["process"] }

# Serialization
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IP address parsing
ipnet = "2"

# Unique ID untuk request tracking
uuid = { version = "1", features = ["v4"] }

# Admin HTTP API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Embedded KV store untuk persistence
sled = "0.34"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
